Fix code review findings from PR #713 review
Fix coderabbit findings:
- ActivityLogger: guard null server_host before Map.copyOf, drop
  redundant setTimingData read-backs, remove no-op
  validateStandardsCompliance, remove unsafe parseLong of the server
  connection id, use atomic incrementTimingData for saturation/exception
  counters, and clean requestMap on terminal callbacks (leak fix).
- StandardField: SERVER_CONNECTION_ID reads the real server connection id
  from TimedRequest instead of the corrupt parseLong value.
- FullFlowContext: incrementTimingData persists the combined value by
  seeding the local entry from the parent base value.
- Correlation: propagate the request id to ProxyToServerConnection so
  responseReceivedFromServer observers no longer receive null request ids.
- recordClientConnected: isolate each ActivityTracker in its own
  try/catch.
- Header fields: include valueTransformer in ResponseHeaderField
  equals/hashCode; normalize identity transformer to a shared constant.
- ResponseTimeCategoryField: defensively copy thresholds (List.copyOf).
- LogField: rename extractValue param to timedRequest and fix javadoc.
- Remove the dead/wrong-direction MITM TLS detection path
  (checkAndPerformTlsDetection, MitmDetectTlsAndEncrypt, tlsInspectionDone,
  encryptForMitm) and fix the stale comment.
- Docs: drop stale :88/:104 line anchors, align ActivityLogger package,
  update TIMING_METRICS example to the 3-arg responseSentToClient
  signature, and fix broken README imports.